name:                irc-enumerator
version:             0.1
stability:           Alpha
license:             BSD3
synopsis:            Enumerator-based IRC package.
homepage:            https://github.com/pqwy/irc-enumerator
author:              David Kaloper
category:            Network, Enumerator
description:
    Simple and fast IRC library, based on attoparsec and iteratee IO. The goal
    is not to do too much, leaving you to structure the logic above the
    protocol.
build-type:          Simple
cabal-version:       >= 1.8

flag bot
    description: Build a simple logger client.
    default: False

library

  hs-source-dirs: src

  exposed-modules:
    Network.IRC.Enumerator.Message
    Network.IRC.Enumerator.Commands
    Network.IRC.Enumerator.Protocol
    Network.IRC.Enumerator.Network
  
  other-modules:
    Network.IRC.Enumerator.Message.Command

  build-depends:
      base               >= 4.4
    , containers         >= 0.4
    , transformers       >= 0.2.2
    , bytestring         >= 0.9
    , text               >= 0.11
    , attoparsec         >= 0.10.1
    , enumerator         >= 0.4.16
    , network            >= 2.3
    , network-enumerator >= 0.1.2

executable irc-dumper
  main-is: bot.hs
  if flag(bot)
    Buildable: True
  else
    Buildable: False

  build-depends:
      irc-enumerator     -any
    , base               >= 4.4
    , text               >= 0.11
    , enumerator         >= 0.4.16


